manifests/infra/envoy-gateway/routes/longhorn/security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: longhorn-oidc-config
  namespace: longhorn-system
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: longhorn-route
  oidc:
    provider:
      issuer: "https://auth.jeremymr.dev/application/o/longhorn/"
    clientID: "Wxqom19mHxBaVE3loYlVPsl4TgcpCupOOkmnDR5X"
    clientSecret:
      name: "longhorn-client-secret"
    redirectURL: "https://longhorn.jeremymr.dev/oauth2/callback"
    logoutPath: "/logout"
